[package]
name = "actor-helper"
description = "Helper library for building actor systems"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/actor-helper"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread","sync","macros","time"] }