[package]
name = "actor-helper"
description = "Helper library for building actor systems"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/actor-helper"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.2"
edition = "2024"

[dependencies]
futures-util = "0.3"
futures-executor = "0.3"